# Food-leftovers-recognition

./: .gitignore  BoundBox.cpp  BoundBox.hpp  CMakeLists.txt  Crisci.cpp  Crisci.h  README.md
Food_leftover_dataset/tray2/: labels.txt
Food_leftover_dataset/tray4/: labels.txt
Food_leftover_dataset/tray5/: labels.txt
Food_leftover_dataset/tray6/: labels.txt
Food_leftover_dataset/tray7/: labels.txt
Food_leftover_dataset/tray8/: labels.txt
src/: BBtest.cpp  BoundBox.cpp  BoundBox.hpp  Crisci.cpp  Crisci.h  Crisci.hpp  Detector.cpp  Detector.hpp  Seg.cpp  Seg.hpp  WaterSegmentation.cpp  WaterSegmentation.hpp  classifier.py  gaborClassifier.cpp  gaborClassifier.h  main.cpp  mainCrisci.cpp  multiCNN.py  sliceMatch.cpp  sliceMatch.h  test.cpp  utils.cpp  utils.hpp
src/metrics/: DatasetLoader.cpp  DatasetLoader.hpp  IntersectionOverUnion.cpp  IntersectionOverUnion.hpp  MeanAveragePrecision.cpp  MeanAveragePrecision.hpp  metrics.cpp  metrics_test.cpp
src/segmentation/: BoundingBoxes.cpp  BoundingBoxes.hpp  EdgeSegmentation.cpp  EdgeSegmentation.hpp  Estimator.cpp  Estimator.hpp  MaskSplitter.cpp  MaskSplitter.hpp  Masks.cpp  Masks.hpp  MeanShift.cpp  MeanShift.hpp  segmentation.cpp
